# sondera-harness-python

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/cedar/: CEDAR_REFERENCE.md  SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-docs.yml
docs/: book.toml  mkdocs.yml  pyproject.toml
docs/src/: deployment.md  index.md  installation.md  quickstart.md  troubleshooting.md  writing-policies.md
docs/src/concepts/: decisions.md  index.md  policies.md  stages.md  trajectories.md
docs/src/integrations/: adk.md  custom.md  index.md  langgraph.md  openclaw-policies.md  openclaw.md  strands.md
docs/src/notebooks/: adk.ipynb  custom.ipynb  langgraph.ipynb  quickstart.ipynb  strands.ipynb
docs/src/sondera_docs/: __init__.py  cedar_lexer.py
docs/src/stylesheets/: extra.css
examples/adk/: README.md  pyproject.toml
examples/adk/policies/: email_calendar_assistant.cedar  email_calendar_assistant.cedarschema  investment_chatbot.cedarschema
examples/adk/src/adk_examples/: __init__.py  email_calendar_assistant.py  investment_chatbot.py  io.py  payment_agent.py
examples/archetypes/: README.md  pyproject.toml
examples/archetypes/src/archetypes/: __init__.py
examples/archetypes/src/archetypes/coding/: naive.py
examples/archetypes/src/archetypes/communications/: __init__.py  calendar.py  email.py
examples/archetypes/src/archetypes/finance/: __init__.py  account.py  market.py  notification.py  portfolio.py  trading.py
examples/archetypes/src/archetypes/healthcare/: __init__.py  clinical.py  ehr.py
examples/archetypes/src/archetypes/payments/: __init__.py  customer.py  email.py  refund.py  transaction.py
examples/cedar/: README.md  coding.cedar  coding.cedarschema  coding_agent.py  pyproject.toml
examples/claude-code/: README.md  pyproject.toml
examples/claude-code/policies/: plan_mode.cedar
examples/claude-code/schema/: claude_code.cedarschema
examples/claude-code/src/sondera_claude/: cli.py  hooks.py  types.py
examples/claude-code/tests/: test_cli.py  test_hooks.py
examples/github_copilot/: README.md  pyproject.toml
examples/github_copilot/src/github_copilot_examples/: __init__.py  investment_chatbot.py
examples/langgraph/: README.md  pyproject.toml
examples/langgraph/src/langgraph_examples/: __init__.py  investment_chatbot.py  life_sciences_agent.py  payment_agent.py  providers.py  quickstart.py  quickstart_graph.py
examples/pydantic-ai/: README.md  pyproject.toml
examples/pydantic-ai/policies/: coding_assistant.cedar  investment_chatbot.cedar  payment_agent.cedar  payment_agent.cedarschema
examples/pydantic-ai/src/pydantic_ai_examples/: __init__.py  coding_assistant.py  investment_chatbot.py  life_sciences_agent.py  payment_agent.py  quickstart.py
examples/strands/: README.md  pyproject.toml
examples/strands/src/strands_examples/: __init__.py  email_calendar_assistant.py  investment_chatbot.py  payment_agent.py
scripts/: generate_protos.py  validate_doc_policies.py
src/sondera/: __init__.py  __main__.py  cli.py  exceptions.py  settings.py  types.py
src/sondera/adk/: __init__.py  analyze.py  plugin.py
src/sondera/auth/: device.py
src/sondera/harness/: __init__.py  abc.py
src/sondera/harness/cedar/: harness.py  schema.py
src/sondera/harness/sondera/: _grpc.py  harness.py
src/sondera/harness/trajectory/: __init__.py  abc.py  file_storage.py
src/sondera/langgraph/: __init__.py  analyze.py  exceptions.py  graph.py  middleware.py
src/sondera/proto/google/protobuf/: any_pb2_grpc.py  duration_pb2_grpc.py  empty_pb2_grpc.py  struct_pb2_grpc.py  timestamp_pb2_grpc.py  wrappers_pb2_grpc.py
src/sondera/proto/sondera/core/v1/: primitives_pb2.py  primitives_pb2.pyi  primitives_pb2_grpc.py
src/sondera/proto/sondera/harness/v1/: harness_pb2.py  harness_pb2.pyi  harness_pb2_grpc.py  policy_pack_pb2.py  policy_pack_pb2.pyi  policy_pack_pb2_grpc.py
src/sondera/pydantic/: __init__.py  analyze.py  provider.py  toolset.py
src/sondera/strands/: __init__.py  analyze.py  harness.py
src/sondera/tui/: app.py  app.tcss  colors.py  events.py  mixins.py  util.py
src/sondera/tui/ai/: __init__.py  client.py  context.py  panel.py  session.py  tools.py
src/sondera/tui/screens/: __init__.py  adjudication.py  agent.py  config.py  screensaver.py  theater.py  trajectory.py
src/sondera/tui/theater/: __init__.py  events.py  player.py  plugin.py
src/sondera/tui/theater/plugins/: __init__.py  ekg.py
src/sondera/tui/theater/widgets/: __init__.py  animation_canvas.py  scrubber.py  visualization_palette.py
src/sondera/tui/widgets/: __init__.py  agent_card.py  agent_list.py  agents_feed.py  dashboard_header.py  pagination_bar.py  recent_adjudications.py  recent_trajectories.py  summary.py  tool_card.py  trajectory_feed.py  violation_panel.py  violations_feed.py  violations_list.py  violations_summary.py
tests/: test_auth_device.py  test_file_storage.py  test_grpc_converters.py  test_harness.py  test_types.py
tests/adk/: __init__.py  test_analyze.py  test_plugin.py
tests/cedar/: test_cedar_policy.py  test_schema.py
tests/e2e/: test_harness_e2e.py
tests/langgraph/: test_analyze.py  test_graph.py  test_middleware.py
tests/pydantic_ai/: test_provider.py
tests/strands/: __init__.py  test_error_handling.py  test_harness.py
tests/tui/: test_dedup_adjudications.py  test_stream_ask_tools.py
