[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sondera-harness"
version = "0.10.0"
description = "Sondera Harness SDK for Python - Agent governance and policy enforcement"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [
    { name = "Sondera AI", email = "sdk@sondera.ai" }
]
keywords = ["ai", "agents", "governance", "policy", "guardrails", "llm", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "cedar-python[mcp]>=0.1.1",
    "click>=8.0.0",
    "click-default-group>=1.2.4",
    "httpx>=0.27.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "sondera-harness-client==0.1.0.dev219",
    "textual>=6.11.0",
]

[project.urls]
Homepage = "https://github.com/sondera-ai/harness-sdk-python"
Documentation = "https://docs.sondera.ai"
Repository = "https://github.com/sondera-ai/harness-sdk-python"
Issues = "https://github.com/sondera-ai/harness-sdk-python/issues"
Changelog = "https://github.com/sondera-ai/harness-sdk-python/blob/main/CHANGELOG.md"

[project.scripts]
sondera = "sondera.cli:cli"
sondera-harness = "sondera.cli:cli"


[tool.setuptools.package-data]
sondera = ["py.typed", "tui/*.tcss"]

[project.optional-dependencies]
ai = ["litellm>=1.30.0"]
adk = ["google-adk>=1.22.0"]
langgraph = ["langchain>=1.2.0", "langgraph>=1.0.5"]
strands = ["strands-agents>=1.21.0"]
pydantic-ai = ["pydantic-ai-slim>=1.75.0"]
all = [
    "litellm>=1.30.0",
    "google-adk>=1.22.0",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "strands-agents>=1.21.0",
    "pydantic-ai-slim>=1.75.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "textual-dev>=1.8.0",
    "ruff>=0.15.0",
    "pyright",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
]
examples = [
    "sondera-examples-adk",
    "sondera-examples-langgraph",
    "sondera-examples-pydantic-ai",
    "sondera-examples-strands",
    "sondera-examples-cedar",
    "sondera-examples-claude-code"
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
exclude = []

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (SAST)
    "T10",    # flake8-debugger
]

ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Required for ADK's function schema introspection.
"examples/adk/**" = ["UP006", "UP035", "UP045"]  # Allow deprecated typing syntax (List, Optional, etc.)
"examples/**" = ["S101"]  # assert is fine in example code
"examples/pydantic-ai/src/pydantic_ai_examples/coding_assistant.py" = ["S108", "S602", "S603", "S607"]  # intentional shell/tmp usage
"docs/**" = ["S101"]  # assert is fine in documentation notebooks
"scripts/**" = ["S603", "S607"]  # subprocess calls in build scripts
"src/sondera/harness/**" = ["S101"]  # type-narrowing asserts after _ensure_connected()
"src/sondera/tui/**" = ["S110", "S112"]  # try-except-pass/continue for widget queries that may not be mounted
"src/sondera/adk/analyze.py" = ["S110"]  # try-except-pass in type introspection
"src/sondera/langgraph/**" = ["S101", "S110"]  # type-narrowing asserts, try-except-pass in type introspection
"src/sondera/pydantic/**" = ["S101", "S110"]  # type-narrowing asserts, try-except-pass in type introspection
"src/sondera/strands/analyze.py" = ["S110"]  # try-except-pass in type introspection
"tests/*" = ["S101", "S108"]  # assert and temp file paths are fine in tests

[tool.ruff.lint.isort]
known-first-party = ["sondera"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
reportMissingImports = "none"  # Optional dependencies (adk, langgraph, strands) aren't installed
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "tests",
    "examples/cedar",  # Not in workspace, has external deps
    "examples/github_copilot",  # Not in workspace, has external deps
]

# Define execution environments for main SDK and examples
[[tool.pyright.executionEnvironments]]
root = "src"

[[tool.pyright.executionEnvironments]]
root = "examples/archetypes/src"

[[tool.pyright.executionEnvironments]]
root = "examples/adk/src"
extraPaths = ["src", "examples/archetypes/src"]

[[tool.pyright.executionEnvironments]]
root = "examples/langgraph/src"
extraPaths = ["src", "examples/archetypes/src"]

[[tool.pyright.executionEnvironments]]
root = "examples/claude-code/src"
extraPaths = ["src"]

[[tool.pyright.executionEnvironments]]
root = "examples/pydantic-ai/src"
extraPaths = ["src", "examples/archetypes/src"]

[[tool.pyright.executionEnvironments]]
root = "examples/strands/src"
extraPaths = ["src", "examples/archetypes/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v -m 'not integration'"
markers = [
    "integration: requires a running Sondera Harness service (SONDERA_HARNESS_ENDPOINT, SONDERA_API_TOKEN)",
]

[tool.uv.workspace]
members = [
    "examples/adk",
    "examples/claude-code",
 "examples/langgraph",
 "examples/pydantic-ai",
 "examples/strands",
 "examples/archetypes",
 "examples/cedar",
 "docs",
]

[tool.uv.sources]
sondera-archetypes = { workspace = true }
sondera-examples-adk = { workspace = true }
sondera-examples-langgraph = { workspace = true }
sondera-examples-strands = { workspace = true }
sondera-examples-pydantic-ai = { workspace = true }
sondera-examples-cedar = { workspace = true }
sondera-examples-claude-code = { workspace = true }
