[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sondera-docs"
version = "0.1.0"
description = "Documentation for Sondera Harness"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "sondera-harness[all]",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-markdown-docs>=0.9.0",
]

[project.entry-points."pygments.lexers"]
cedar = "sondera_docs.cedar_lexer:CedarLexer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sondera_docs*"]

[tool.uv.sources]
sondera-harness = { workspace = true }
