[project]
name = "sondera-archetypes"
version = "0.1.0"
description = "Shared agent tools and utilities organized by domain for Sondera examples"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archetypes"]
