[project]
name = "sondera-examples-cedar"
version = "0.1.0"
description = "CedarPolicyHarness agent examples using Sondera SDK"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "sondera-archetypes",
    "sondera-harness",
    "loguru"
]

[tool.uv.sources]
sondera-archetypes = { workspace = true }
sondera-harness = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
