[project]
name = "sondera-examples-claude-code"
version = "0.1.0"
description = "Claude Code hooks examples using Cedar policies"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "cedar-python>=0.1.1",
    "click>=8.0.0",
    "pydantic>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sondera_claude"]

[project.scripts]
sondera-claude = "sondera_claude.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
