[project]
name = "sondera-examples-github-copilot"
version = "0.1.0"
description = "GitHub Copilot agent examples using Sondera SDK"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "sondera-archetypes",
    "sondera-harness",
    "pydantic>=2.0",
    "copilot-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_copilot_examples"]

[tool.uv.sources]
sondera-archetypes = { workspace = true }
sondera-harness = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
