[project]
name = "sondera-examples-langgraph"
version = "0.1.0"
description = "LangGraph agent examples using Sondera SDK"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "sondera-archetypes",
    "sondera-harness",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_examples"]

[tool.uv.sources]
sondera-archetypes = { workspace = true }
sondera-harness = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai"]
ollama = ["langchain-community"]
all = ["langchain-openai", "langchain-anthropic", "langchain-google-genai", "langchain-community"]
