[project]
name = "sondera-examples-strands"
version = "0.1.0"
description = "Strands agent examples using Sondera SDK"
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "sondera-archetypes",
    "sondera-harness",
    "strands-agents>=1.21",
    "strands-agents-tools>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strands_examples"]

[tool.uv.sources]
sondera-archetypes = { workspace = true }
sondera-harness = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
